php-fastcgi/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-fastcgi-demo
spec:
  type: ClusterIP
  ports:
    - name: fastcgi
      port: 9000
  selector:
    app: php-fastcgi-demo
